# unsafe_space

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
src/: auth.rs  config.rs  db.rs  error.rs  init.sql  main.rs  mime.rs
src/db/: auth.rs  messages.rs  mod.rs
src/db/sql/: drop.sql  init.sql
src/pages/: files.rs  index.rs  login.rs  logout.rs  message.rs  mod.rs  register.rs  timeline.rs  user.rs
src/pages/html/: index.html  login.html  message-component.html  register.html  timeline.html
src/sql/: drop.sql  init.sql
static/: main.css
