[package]
name = "unsafe_space"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
toml = "0.5.8"
rusqlite = "0.26.3"
handlebars = "4.1.6"
env_logger = "0.9.0"
chrono = "0.4.19"
log = "*"
serde_json = "*"
serde = "*"
time = "*"